more colors and guesses

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <link rel="stylesheet" href="./style.css">
 
-    
+
 </head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -111,6 +111,76 @@
                 <div><span class='eight-2' id='space'></span></div>
                 <div><span class='eight-3' id='space'></span></div>
                 <div><span class='eight-4' id='space'></span></div>
+                <div class='dots9'>
+                    <div class='one1'></div>
+                    <div class='one2'></div>
+                    <div class='one3'></div>
+                    <div class='one4'></div>
+                </div>
+                <div><span class='nine-1' id='space'></span></div>
+                <div><span class='nine-2' id='space'></span></div>
+                <div><span class='nine-3' id='space'></span></div>
+                <div><span class='nine-4' id='space'></span></div>
+                <div class='dots10'>
+                    <div class='one1'></div>
+                    <div class='one2'></div>
+                    <div class='one3'></div>
+                    <div class='one4'></div>
+                </div>
+                <div><span class='ten-1' id='space'></span></div>
+                <div><span class='ten-2' id='space'></span></div>
+                <div><span class='ten-3' id='space'></span></div>
+                <div><span class='ten-4' id='space'></span></div>
+                <div class='dots11'>
+                    <div class='one1'></div>
+                    <div class='one2'></div>
+                    <div class='one3'></div>
+                    <div class='one4'></div>
+                </div>
+                <div><span class='eleven-1' id='space'></span></div>
+                <div><span class='eleven-2' id='space'></span></div>
+                <div><span class='eleven-3' id='space'></span></div>
+                <div><span class='eleven-4' id='space'></span></div>
+                <div class='dots12'>
+                    <div class='one1'></div>
+                    <div class='one2'></div>
+                    <div class='one3'></div>
+                    <div class='one4'></div>
+                </div>
+                <div><span class='twelve-1' id='space'></span></div>
+                <div><span class='twelve-2' id='space'></span></div>
+                <div><span class='twelve-3' id='space'></span></div>
+                <div><span class='twelve-4' id='space'></span></div>
+                <div class='dots13'>
+                    <div class='one1'></div>
+                    <div class='one2'></div>
+                    <div class='one3'></div>
+                    <div class='one4'></div>
+                </div>
+                <div><span class='thirteen-1' id='space'></span></div>
+                <div><span class='thirteen-2' id='space'></span></div>
+                <div><span class='thirteen-3' id='space'></span></div>
+                <div><span class='thirteen-4' id='space'></span></div>
+                <div class='dots14'>
+                    <div class='one1'></div>
+                    <div class='one2'></div>
+                    <div class='one3'></div>
+                    <div class='one4'></div>
+                </div>
+                <div><span class='fourteen-1' id='space'></span></div>
+                <div><span class='fourteen-2' id='space'></span></div>
+                <div><span class='fourteen-3' id='space'></span></div>
+                <div><span class='fourteen-4' id='space'></span></div>
+                <div class='dots15'>
+                    <div class='one1'></div>
+                    <div class='one2'></div>
+                    <div class='one3'></div>
+                    <div class='one4'></div>
+                </div>
+                <div><span class='fifteen-1' id='space'></span></div>
+                <div><span class='fifteen-2' id='space'></span></div>
+                <div><span class='fifteen-3' id='space'></span></div>
+                <div><span class='fifteen-4' id='space'></span></div>
             </div>
         </div>
 
@@ -119,13 +189,15 @@
             <span class='yellow' id='color'></span>
             <span class='green' id='color'></span>
             <span class='blue' id='color'></span>
+            <span class='pink' id='color'></span>
             <span class='black' id='color'></span>
+            <span class='white' id='color'></span>
             <span class='delete'>X</span>
             <span class='submit'>√</span>
         </div>
     </div>
-    <div class="resetBtn">     
-        <button class="resetBtn" >reset</button>
+    <div class="resetBtn">
+        <button class="resetBtn">reset</button>
     </div>
     <div class='rules'>
         <h1 class='rules-header'>Rules</h1>
