--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mastermind</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
@@ -12,13 +13,25 @@
 
 
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+
+
 
 <body>
     <!-- partial:index.partial.html -->
     <div class='game'>
         <h1 class='header'>Mastermind</h1>
+        <div class="controls">
+            <label for="modeSelect">mode</label>
+        <select id="modeSelect">
+            <option value="computer" selected>computer sets code</option>
+            <option value="human">human sets code</option>
+            
+        </select>
+           <button id="chooseCodeBtn" type="button">set code</button>
+    </div>
+    <div>
+        <button id="resetBtn" type="button">reset</button>
+    </div>
         <div class='top'>
             <div class='code'>
                 <span class='color-one'></span>
@@ -146,11 +159,7 @@
             <span class='submit'>√</span>
         </div>
     </div>
-      <div class="resetBtn">
-      <button id="resetBtn" type="button">reset</button>
-    <div class="resetBtn">
-        <button class="resetBtn">reset</button>
-    </div>
+    
 
     <div class='rules'>
         <h1 class='rules-header'>Rules</h1>
