white links for game and rules

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
 </head>
 
 <header>
-    <a href="https://samiboi1.github.io/mastermind/">Game</a>
-    <a href="https://samiboi1.github.io/mastermind/rules.html">Rules</a>
+    <div class="links">
+        <a href="https://samiboi1.github.io/mastermind/">Game</a>
+        <a href="https://samiboi1.github.io/mastermind/rules.html">Rules</a>
+    </div>
 </header>
 
 <div id="game-notification" class="notification hidden">
-  <div class="notification-content">
-    <h2 id="notif-title"></h2>
-    <p id="notif-message"></p>
-    <button id="notif-button">OK</button>
-  </div>
+    <div class="notification-content">
+        <h2 id="notif-title"></h2>
+        <p id="notif-message"></p>
+        <button id="notif-button">OK</button>
+    </div>
 </div>
 
 
