--- a/rules.html
+++ b/rules.html
@@ -15,8 +15,10 @@
 </head>
 
 <header>
-    <a href="https://samiboi1.github.io/mastermind/">Game</a>
-    <a href="https://samiboi1.github.io/mastermind/rules.html">Rules</a>
+    <div class="links">
+        <a href="https://samiboi1.github.io/mastermind/">Game</a>
+        <a href="https://samiboi1.github.io/mastermind/rules.html">Rules</a>
+    </div>
 </header>
 
 <body>
