--- a/rules.html
+++ b/rules.html
@@ -15,15 +15,12 @@
 </head>
 
 <header>
-    <div class="links">
-        <a href="https://samiboi1.github.io/mastermind/">Game</a>
-        <a href="https://samiboi1.github.io/mastermind/rules.html">Rules</a>
-    </div>
 </header>
 
 <body>
     <div class='rules'>
         <h1 class='rules-header'>Rules</h1>
+        <button class="game_rulesBtn" onclick="goToGame()">Game</button>
         <div class='content'>
             <p><span class='obj'>Objective:</span> Crack the hidden code</p>
             <p><span class='how'>How to Play:</span> The code is a four color code containing the colored buttons
